Fixed other stuff. Added PSD estimation on TeX.

--- a/Homework1/HW1_report/report.tex
+++ b/Homework1/HW1_report/report.tex
@@ -207,7 +207,14 @@ From Figure \ref{fig:choiceofn}, with restricted to the interval $[1,5]$ it can 
 Using this value the autocorrelation matrix $\mathbf{R}$ is indeed well conditioned, hence the solution is acceptable.
 
 \subsection*{Results}
-In Figure REF it is shown the power spectral density estimation using the methods described above, along with its actual value.
+In Figure \ref{fig:estimatedpsd01} it is shown the power spectral density estimation using the methods described in the previous sections, along with the analytical PSD.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\textwidth]{estimatedpsd01}
+	\caption{Estimated PSD, $\sigma_w^2 = 0.1$}
+	\label{fig:estimatedpsd01}
+\end{figure}
 
 \section*{Problem 2}
 
